squashing bugs

--- a/Styles/box-score.css
+++ b/Styles/box-score.css
@@ -23,28 +23,26 @@
   padding: 0 10px;
 }
 
-.box-score-graphic > * {
-  display: flex;
-  text-align: center;
-}
-
 .box-score-graphic .team {
+  flex: 2;
   min-width: 1px;
   min-height: 1px;
-  flex: 2;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
+.box-score-graphic > * {
+  display: flex;
+  text-align: center;
+}
+
 .box-score-graphic .team img {
   display: inline-block;
   vertical-align: bottom;
-  /*max-width: 100%;
-  height: auto;*/
   width: 200px;
   height: 200px;
-  object-fit:contain;
+  object-fit: contain;
 }
 
 .box-score-graphic .team .score {
