--- a/Styles/elements.css
+++ b/Styles/elements.css
@@ -26,6 +26,7 @@
 .row.pad {
   padding-left: 24px;
   padding-right: 24px;
+  display: block;
 }
 
 .row.pad-grid {
